Made changes to all edited pages footer, and the header of select pages, to fix overflow.

--- a/Index.css
+++ b/Index.css
@@ -90,21 +90,20 @@
 #footer-Last_Changed{
   grid-area: last_changed;
   border-right: 1px solid #000000;
-  background-color: #f48024;
+  padding-left: 5px;
   text-align: left;
 }
 #footer-Author{
   grid-area: author;
   border-right: 1px solid #000000;
   border-left: 1px solid #000000;
-  background-color: #f48024;
   text-align: center;
 }
 #footer-Go_To_Top{
   grid-area: go_to_top;
   display: block;
   border-left: 1px solid #000000;
-  background-color: #f48024;
+  padding-right: 5px;
   text-align: right;
   text-decoration: none;
 }
@@ -118,7 +117,8 @@
   grid: 
     'last_changed author go_to_top';
   grid-gap: 0px;
-  border: 5px solid #f48024;
+  background-color: #f48024;
+  padding: 5px 0px;
   width: 100%;
   position: fixed;
   bottom: 0;
